updated run script for Java 24 update